--- a/views/pages/home.dust
+++ b/views/pages/home.dust
@@ -8,7 +8,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="banner-text text-center">
-						<div class="intro-para text-center quote">
+						<div class="text-center">
 							<h1 class="primary-color">Softball is more than a game</h1>
 							<p class="lead">
 								It's an investment in our youth and an opportunity to show them how to succeed, not just on the field, but in the classroom, in the workplace, and in life. 
