--- a/public/assets/less/site.less
+++ b/public/assets/less/site.less
@@ -329,6 +329,84 @@ body > section:nth-child(even) {
 	}
 }
 
+@media (max-width: 450px) {
+	.sponsor-section {
+		dl {
+			overflow: hidden;
+			
+			.sponsor-primary {
+				h4 {
+					font-size: 16px;
+				}
+			}
+		}
+	}
+}
+
+/**
+ * About
+ */
+.about-section {
+	
+	.features {
+		margin-bottom: 20px;
+		
+		.feature {
+			
+			@media (max-width: 991px){
+				text-align: center;
+				margin-bottom: 30px;
+			}
+			
+			img {
+				max-width: 40px;
+				position: relative;
+				top: 10px;
+				
+				@media (min-width: 992px){
+					float: left;
+				}
+			}
+			
+			.info {
+				
+				@media (min-width: 992px){
+					float: left;
+					width: 80%;
+					margin-left: 20px;
+				}
+				
+				strong {
+					display: block;
+					font-weight: 500;
+					font-size: 16px;
+					color: #444;
+					margin-top: 15px;
+				}
+				
+				p {
+					font-weight: normal;
+					font-size: 14px;
+					color: #797979;
+					margin-top: 10px;
+					line-height: 24px;
+				}
+			}
+		}
+	}
+}
+
+@media (max-width: 991px) {
+	
+	.features {
+		
+		.feature {
+			text-align: center;
+			margin-bottom: 30px;
+		}
+	}
+}
+
 /**
  * Footer
  */
