--- a/views/pages/about.dust
+++ b/views/pages/about.dust
@@ -1,16 +1,15 @@
-{> "wrappers/main" /}
+{> "wrappers/main" page="about" /}
 
 {<bodyContent}
 
 	<!--Banner-->
-	<div class="mini-banner" style="background-image:url(/assets/img/banner/skylar-pitching.jpg);">
-		<div class="bg-mask">
-			<div class="container">
-				<div class="row">
-					<div class="banner-text text-center">
-						<div class="text-center">
-							<h1 class="primary-color">Explosion 14U - Puzio</h1>
-						</div>
+	<div class="mini-banner">
+		<div class="bg-mask grayscale" style="background-image:url(/assets/img/banner/skylar-pitching.jpg);"></div>
+		<div class="container">
+			<div class="row">
+				<div class="banner-text text-center">
+					<div class="text-center">
+						<h1 class="primary-color">Explosion 14U - Puzio</h1>
 					</div>
 				</div>
 			</div>
