--- a/views/pages/home.dust
+++ b/views/pages/home.dust
@@ -1,4 +1,4 @@
-{> "wrappers/main" /}
+{> "wrappers/main" page="home" /}
 
 {<bodyContent}
 
@@ -13,7 +13,7 @@
 							<p class="lead">
 								It's an investment in our youth and an opportunity to show them how to succeed, not just on the field, but in the classroom, in the workplace, and in life. 
 							</p>
-							<a href="/about" class="btn">See What We're About</a>
+							<a href="/about" class="btn btn-highlight">See What We're About</a>
 						</div>
 					</div>
 				</div>
@@ -69,7 +69,7 @@
 					<h4>June</h4>
 					<dl class="dl-horizontal">
 						<dt>June 3-4</dt>
-						<dd>Lansdale, PA - June Jamboree Tournament</dd>
+						<dd>Gilbertsville, PA - June Jamboree Tournament</dd>
 						<dt>June 10-11</dt>
 						<dd>Bethlehem, PA - (16U) Fun in the Sun Tournament</dd>
 						<dt>June 24-25</dt>
