--- a/views/pages/sponsors.dust
+++ b/views/pages/sponsors.dust
@@ -1,16 +1,15 @@
-{> "wrappers/main" /}
+{> "wrappers/main" page="sponsors" /}
 
 {<bodyContent}
 
 	<!--Banner-->
-	<div class="mini-banner" style="background-image:url(/assets/img/banner/slide-safe.jpg);">
-		<div class="bg-mask">
-			<div class="container">
-				<div class="row">
-					<div class="banner-text text-center">
-						<div class="text-center">
-							<h1 class="primary-color">Sponsors</h1>
-						</div>
+	<div class="mini-banner">
+		<div class="bg-mask grayscale" style="background-image:url(/assets/img/banner/slide-safe.jpg);"></div>
+		<div class="container">
+			<div class="row">
+				<div class="banner-text text-center">
+					<div class="text-center">
+						<h1 class="primary-color">Sponsors</h1>
 					</div>
 				</div>
 			</div>
