--- a/views/pages/team.dust
+++ b/views/pages/team.dust
@@ -1,19 +1,16 @@
-{> "wrappers/main" /}
+{> "wrappers/main" page="team" /}
 
 {<bodyContent}
 
 	<!--Banner-->
-	<div class="mini-banner" style="background-image:url(/assets/img/banner/emma-pitch.jpg);">
-		<div class="bg-mask">
-			<div class="container">
-				<div class="row">
-					<div class="banner-text text-center">
-						<div class="text-center">
-							<h1 class="primary-color">Meet the Team</h1>
-							<p class="lead">
-								
-							</p>
-						</div>
+	<div class="mini-banner">
+		<div class="bg-mask grayscale" style="background-image:url(/assets/img/banner/emma-pitch.jpg);"></div>
+		<div class="container">
+			<div class="row">
+				<div class="banner-text text-center">
+					<div class="text-center">
+						<h1 class="primary-color">Meet the Team</h1>
+						<!--<p class="lead"></p>-->
 					</div>
 				</div>
 			</div>
