--- a/views/pages/about.dust
+++ b/views/pages/about.dust
@@ -9,7 +9,7 @@
 			<div class="row">
 				<div class="banner-text text-center">
 					<div class="text-center">
-						<h1 class="primary-color">Explosion 14U - Puzio</h1>
+						<h1>Explosion 14U - Puzio</h1>
 					</div>
 				</div>
 			</div>
