--- a/views/pages/team.dust
+++ b/views/pages/team.dust
@@ -9,7 +9,7 @@
 			<div class="row">
 				<div class="banner-text text-center">
 					<div class="text-center">
-						<h1 class="primary-color">Meet the Team</h1>
+						<h1>Meet the Team</h1>
 						<!--<p class="lead"></p>-->
 					</div>
 				</div>
