Updated 'Team Events' descriptions on home page

--- a/views/pages/home.dust
+++ b/views/pages/home.dust
@@ -84,6 +84,9 @@
 						<dd>Ocean City, MD - USSSA Nationals</dd>
 					</dl>
 				</div>
+				<div class="col-md-12 text-center">
+					<a href="/schedule">See Full Team Schedule</a>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -104,7 +107,7 @@
 				<div class="col-md-6 info">
 					<h4>American Heart Association Walk</h4>
 					<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut aliquet eros at mi hendrerit fermentum at ac neque. Vivamus mattis lectus nec est ullamcorper, non lobortis erat tincidunt. Aenean scelerisque augue vitae lectus malesuada, ut eleifend eros pellentesque. Donec efficitur luctus justo. Vivamus leo diam, mattis eget rhoncus in, convallis a urna. Nullam non pretium lacus. Duis sodales interdum felis a varius. Curabitur auctor nunc et malesuada cursus. Maecenas ut rutrum sapien, sit amet pretium metus.
+					September - Our team walked in the American Heart Association's Lehigh Valley Heart Walk at Dorney Park. One of our team member's brother suffers from a rare heart disease called supra valvular aortic stenosis, so the team decided to walk with #TeamBrody to help raise money and awareness for the treatment and prevention of heart disease. After the walk, the team spent the day at Dorney together. 
 					</p>
 				</div>
 				<div class="col-md-6 image">
@@ -116,9 +119,9 @@
 			
 			<div class="row feature backwards">
 				<div class="col-md-6 info">
-					<h4>Feeding the Homeless</h4>
+					<h4>Serving Those in Need</h4>
 					<p>
-					Vivamus et quam sed tellus iaculis vehicula. Aenean pharetra ante vitae velit pulvinar, a rutrum quam auctor. Donec quis nunc augue. Phasellus tincidunt porta urna, ut luctus velit lobortis elementum. Sed eget convallis lectus, vitae laoreet enim. Nam gravida, nisl vitae maximus eleifend, lorem felis ultrices turpis, in finibus ex diam non lorem. Maecenas euismod aliquam ipsum quis tempor. Praesent pharetra id nisl vitae pharetra. Praesent tincidunt sem vitae ex congue, non euismod urna dignissim.
+					February - Members of our team helped work at "Stand Up Bethlehem" serving community members in need with free food, clothing, services for veterns, health checks, and even haircuts. This program happens bi-monthly and is co-sponsored by groups such as the Lehigh Valley Vietnam Veterans of America, the Department of Veterans Affairs, Hope for Veterans, and others. 
 					</p>
 				</div>
 				<div class="col-md-6 image">
@@ -132,7 +135,7 @@
 				<div class="col-md-6 info">
 					<h4>Dome Tournament</h4>
 					<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut aliquet eros at mi hendrerit fermentum at ac neque. Vivamus mattis lectus nec est ullamcorper, non lobortis erat tincidunt. Aenean scelerisque augue vitae lectus malesuada, ut eleifend eros pellentesque. Donec efficitur luctus justo. Vivamus leo diam, mattis eget rhoncus in, convallis a urna. Nullam non pretium lacus. Duis sodales interdum felis a varius. Curabitur auctor nunc et malesuada cursus. Maecenas ut rutrum sapien, sit amet pretium metus.
+					February - Following a morning of serving community members in need, the team regrouped in Wilkes Barre to play in the USSSA 2017 Cupids Classic II, a one-day, indoor open tournament. Highlights from the day included a triple play and finishing the final game around 1am. 
 					</p>
 				</div>
 				<div class="col-md-6 image">
