--- a/views/elements/nav/main-nav.dust
+++ b/views/elements/nav/main-nav.dust
@@ -17,6 +17,7 @@
 					<li><a href="/team" class="{@eq key=page value="team"}active {/eq}">Team</a></li>
 					<li><a href="/schedule" class="{@eq key=page value="schedule"}active {/eq}">Schedule</a></li>
 					<li><a href="/about" class="{@eq key=page value="about"}active {/eq}">About Us</a></li>
+					<li><a href="/social" class="{@eq key=page value="social"}active {/eq}">Social</a></li>
 					<li><a href="/sponsors" class="{@eq key=page value="sponsors"}active {/eq}">Sponsors</a></li>
 				</ul>
 			</div>
