--- a/public/assets/less/site.less
+++ b/public/assets/less/site.less
@@ -48,6 +48,17 @@ a{
 	}
 }
 
+.dynamic-iframe {
+	width: 90%;
+	max-width: 600px;
+}
+
+@media (max-width: 768px) {
+	.dynamic-link {
+		font-size: 3vw;
+	}
+}
+
 /**
  * Custom
  */
