--- a/views/pages/team.dust
+++ b/views/pages/team.dust
@@ -53,7 +53,12 @@
 			</div>
 			
 			<div class="row player">
-				
+				<div class="col-md-6 image">
+					<img src="/assets/img/players/poster-linsey.jpg" class="img-responsive" />
+				</div>
+				<div class="col-md-6 image">
+					<img src="/assets/img/players/poster-madeline.jpg" class="img-responsive" />
+				</div>
 			</div>
 			
 			<div class="row header">
