Added player images

--- a/public/assets/less/site.less
+++ b/public/assets/less/site.less
@@ -316,9 +316,15 @@ a.btn-highlight {
  */
 
 .player-section {
+	
+	.header {
+		h2 {
+			font-size: 40px;
+		}
+	}
 
 	.player {
-		margin-top: 40px;
+		margin-bottom: 40px;
 		
 		.image {
 			padding: 20px;
