--- a/public/assets/css/site.css
+++ b/public/assets/css/site.css
@@ -260,8 +260,11 @@ a.btn-highlight:focus {
 /**
  * Player
  */
+.player-section .header h2 {
+  font-size: 40px;
+}
 .player-section .player {
-  margin-top: 40px;
+  margin-bottom: 40px;
 }
 .player-section .player .image {
   padding: 20px;
