--- a/views/pages/team.dust
+++ b/views/pages/team.dust
@@ -68,7 +68,15 @@
 			</div>
 			
 			<div class="row player">
-				
+				<div class="col-md-6 image">
+					<img src="/assets/img/players/poster-azeria.jpg" class="img-responsive" />
+				</div>
+				<div class="col-md-6 image">
+					<img src="/assets/img/players/poster-morgan.jpg" class="img-responsive" />
+				</div>
+				<div class="col-md-6 image">
+					<img src="/assets/img/players/poster-riley.jpg" class="img-responsive" />
+				</div>
 			</div>
 			
 			<div class="row header">
@@ -78,7 +86,12 @@
 			</div>
 			
 			<div class="row player">
-				
+				<div class="col-md-6 image">
+					<img src="/assets/img/players/poster-alexis.jpg" class="img-responsive" />
+				</div>
+				<div class="col-md-6 image">
+					<img src="/assets/img/players/poster-ryley.jpg" class="img-responsive" />
+				</div>
 			</div>
 			
 		</div>
