Added Twitter and Facebook links

--- a/public/assets/less/site.less
+++ b/public/assets/less/site.less
@@ -344,6 +344,36 @@ a.btn-highlight {
 }
 
 /**
+ * Social
+ */
+.social-section {
+	.social-media {
+		i.fa {
+			font-size: 20vw;
+			
+			&.fa-facebook-official {
+				color: #3b5998;
+			}
+			
+			&.fa-twitter-square {
+				color: #0084b4;
+			}
+		}
+	}
+}
+
+@media (min-width: 769px) {
+	.social-section {
+		.social-media {
+			i.fa {
+				font-size: 150px;
+				margin: 10px;
+			}
+		}
+	}
+}
+
+/**
  * Sponsors
  */
 .sponsor-section {
