--- a/public/assets/css/site.css
+++ b/public/assets/css/site.css
@@ -276,6 +276,24 @@ a.btn-highlight:focus {
   font-weight: bold;
 }
 /**
+ * Social
+ */
+.social-section .social-media i.fa {
+  font-size: 20vw;
+}
+.social-section .social-media i.fa.fa-facebook-official {
+  color: #3b5998;
+}
+.social-section .social-media i.fa.fa-twitter-square {
+  color: #0084b4;
+}
+@media (min-width: 769px) {
+  .social-section .social-media i.fa {
+    font-size: 150px;
+    margin: 10px;
+  }
+}
+/**
  * Sponsors
  */
 .sponsor-section h4 {
