--- a/public/assets/less/site.less
+++ b/public/assets/less/site.less
@@ -358,6 +358,10 @@ a.btn-highlight {
 			&.fa-twitter-square {
 				color: #0084b4;
 			}
+			
+			&.fa-instagram {
+				color: #8a3ab9;
+			}
 		}
 	}
 }
