--- a/views/pages/social.dust
+++ b/views/pages/social.dust
@@ -34,6 +34,9 @@
 					<a href="http://twitter.com/explosion_puzio" class="dynamic-link" target="_blank">
 						<i class="fa fa-twitter-square fa-4" aria-hidden="true"></i>
 					</a>
+					<a href="http://instagram.com/explosion.puzio" class="dynamic-link" target="_blank">
+						<i class="fa fa-instagram fa-4" aria-hidden="true"></i>
+					</a>
 				</div>
 			</div>
 			
